Compiler/fasto/tests/mult_neg1.err
Type error: In Times: one of subexpression types is not Int: int and char at line 2, column 20