Compiler/fasto/tests/mult_neg1.fo
fun int main () = 
  let w = write(10 * 'a') in 0